# zall

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  DESIGN.md  IMPL.md  LICENSE  README.md  SECURITY.md  minecraft_log2.txt  minecraft_test_log.txt  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
.zall/: AGENTS.md  mcp.toml  rules.toml  skills.toml
.zall/agents/: explore.md  plan.md
scripts/: check_ipr3.py  del_nul.py  del_nul.vbs  install.ps1  install.sh
src/zall/: __init__.py  __main__.py
src/zall/_util/: __init__.py  file.py  file_state.py  logging.py  model_registry.py  path.py  string.py  toml.py  win32.py
src/zall/adapters/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai_compat.py
src/zall/cli/: __init__.py  app.py  config.py  config_layers.py  environment.py  init_wizard.py  judge.py  orchestrator.py  prompt.py  render.py  repl_ui.py  replay.py  responder.py  session.py  update.py
src/zall/codegraph/: __init__.py
src/zall/core/: __init__.py  accountability.py  action.py  agent.py  builder.py  chat_state.py  checkpoint.py  compactor.py  context.py  context_manager.py  events.py  executor.py  extension.py  gate.py  goal.py  lifecycle.py  loop.py  loop_config.py  loop_errors.py  (+10 more)
tests/: INVARIANTS.md  __init__.py  _mock_mcp_server.py  conftest.py  test_action_invariants.py  test_adapter_mock_invariants.py  test_agent_builder.py  test_agent_definition.py  test_auto_compact_v018.py  test_bash_invariants.py  test_bash_pty.py  test_batch_edit_invariants.py  test_bugfix_regressions.py  test_chat_state_invariants.py  test_checkpoint_invariants.py  test_cli_app.py  test_cli_interaction_v012.py  test_cli_interaction_v013.py  test_cli_judge.py  test_cli_missing_commands.py  test_cli_new_commands.py  test_cli_render.py  test_cli_responder.py  test_codegraph_invariants.py  test_compactor_invariants.py  test_config_layers.py  test_confirm_gate_invariants.py  test_context_invariants.py  test_context_judge_invariants.py  test_edit_bash_invariants.py  test_edit_file_invariants.py  test_eval_invariants.py  test_git_rules_invariants.py  test_glob_invariants.py  test_goal_invariants.py  test_grep_invariants.py  test_integration.py  test_integration_v040.py  test_interaction_v020.py  test_judge_invariants.py  (+33 more)
tests/spec/: __init__.py  aas_minimal_schema.py  test_aas_e_falsifiability.py
(+50 files in other folders)
